Bug 101696 - interface with no uuid shouldn't parse. Patch adds a warning, does not prohibit it, and cleans up interfaces that are missing id's  r=rginda, sr=jband